@@ -213,32 +213,41 @@ class MS_Addon_Mailchimp extends MS_Addon {
 		try {
 			$member = $subscription->get_member();
 
-			$mail_list_registered = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_registered' );
-			$mail_list_deactivated = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_deactivated' );
-			$mail_list_members = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_members' );
+			//Check if member has a new subscription
+			$membership 	= $subscription->get_membership();
+			$new_membership = MS_Factory::load(
+				'MS_Model_Membership',
+				$membership->on_end_membership_id
+			);
+			if ( !$new_membership->is_valid() ) {
 
-			if ( $mail_list_deactivated == $mail_list_registered ) {
-				// Verify if is subscribed to registered mail list and remove it.
-				if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_registered' ) ) {
-					if ( self::is_user_subscribed( $member->email, $list_id ) ) {
-						self::unsubscribe_user( $member->email, $list_id );
+				$mail_list_registered = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_registered' );
+				$mail_list_deactivated = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_deactivated' );
+				$mail_list_members = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_members' );
+
+				if ( $mail_list_deactivated == $mail_list_registered ) {
+					// Verify if is subscribed to registered mail list and remove it.
+					if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_registered' ) ) {
+						if ( self::is_user_subscribed( $member->email, $list_id ) ) {
+							self::unsubscribe_user( $member->email, $list_id );
+						}
 					}
 				}
-			}
 
-			if ( $mail_list_deactivated == $mail_list_members ) {
-				// Verify if is subscribed to members mail list and remove it.
-				if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_members' ) ) {
-					if ( self::is_user_subscribed( $member->email, $list_id ) ) {
-						self::unsubscribe_user( $member->email, $list_id );
+				if ( $mail_list_deactivated == $mail_list_members ) {
+					// Verify if is subscribed to members mail list and remove it.
+					if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_members' ) ) {
+						if ( self::is_user_subscribed( $member->email, $list_id ) ) {
+							self::unsubscribe_user( $member->email, $list_id );
+						}
 					}
 				}
-			}
 
-			// Subscribe to deactiveted members mail list.
-			if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_deactivated' ) ) {
-				if ( ! self::is_user_subscribed( $member->email, $list_id ) ) {
-					self::subscribe_user( $member, $list_id );
+				// Subscribe to deactiveted members mail list.
+				if ( $list_id = self::$settings->get_custom_setting( 'mailchimp', 'mail_list_deactivated' ) ) {
+					if ( ! self::is_user_subscribed( $member->email, $list_id ) ) {
+						self::subscribe_user( $member, $list_id );
+					}
 				}
 			}
 		} catch ( Exception $e ) {
