@@ -6,13 +6,15 @@ Change Log:
 ----------------------------------------------------------------------
 
 1.0.3.6
-- Added: Added setting to enable or disable cron usage for communication
+- Added: Added setting to enable or disable cron usage for email sending
 - Added: Emails can now be sent directly or scheduled through the setting
 - Added: Integration with new reCaptcha plugin to the reCaptcha Addon
 - Added: Option for Admin created members to generate an invoice to the membership
+- Added: Option for manual invoice created to keep the expire date of the membership the same
 - Fixed: Multiple Invoice creation
 - Fixed: Invoice status not changing for free payments
 - Fixed: Protection with many addons enabled
+- Fixed: Mailchimp list for deactivated users with drop down memberships
 
 1.0.3.5
 ----------------------------------------------------------------------
